--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -40,7 +40,7 @@ jobs:
       pages: write
       id-token: write
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/master'
     name: Deploy czmlEditor to GitHub Pages
     needs: [build]
     steps:
